AM_CPPFLAGS = $(BERP_CFLAGS)

bin_PROGRAMS = berp

berp_SOURCES = 	AlternateRule.vala \
	Branch.vala \
	CallStackItem.vala \
	DerivedRule.vala \
	Generator.vala \
	GeneratorModel.vala \
	LookAheadHint.vala \
	Multilicator.vala \
	ParserGeneratorException.vala \
	ProductionRule.vala \
	Program.vala \
	Rule.vala \
	RuleElement.vala \
	RuleSet.vala \
	SequenceRule.vala \
	StartRule.vala \
	State.vala \
	StateCalculator.vala \
	TokenRule.vala \
	TokenType.vala

berp_LDADD = 
berp_VALAFLAGS = 

CLEANFILES = *.h *.c *.vapi *.stamp

	
