AM_CPPFLAGS = $(BERP_CFLAGS)

bin_PROGRAMS = berp

berp_SOURCES = 	AlternateRule.vala \
	Branch.vala \
	CallStackItem.vala \
	DerivedRule.vala \
	Generator.vala \
	GeneratorModel.vala \
	LookAheadHint.vala \
	Multilicator.vala \
	ParserGeneratorException.vala \
	ProductionRule.vala \
	Program.vala \
	Rule.vala \
	RuleElement.vala \
	RuleSet.vala \
	SequenceRule.vala \
	StartRule.vala \
	State.vala \
	StateCalculator.vala \
	TokenRule.vala \
	TokenType.vala \
	BerpGrammar/AstBuilder.vala \
	BerpGrammar/DomBuilder.vala \
	BerpGrammar/GrammarParser.vala \
	BerpGrammar/Location.vala \
	BerpGrammar/ParserException.vala \
	BerpGrammar/Token.vala \
	BerpGrammar/TokenMatcher.vala \
	BerpGrammar/TokenScanner.vala

berp_LDADD = 
berp_VALAFLAGS = --pkg gio-2.0 --pkg glib-2.0 --pkg gee-0.8

CLEANFILES = *.h *.c *.vapi *.stamp

	
